Refactor(ai): 移除Refinement控制器allowlist